<resources>
    <string name="app_name">Frecipe</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="Copyright">Frecipe Group © 2017</string>
    <string name="splash_screen_logo">Splash screen logo</string>
    <string name="splash_screen_title">Frecipe</string>
    <string name="home">Home</string>
    <string name="fridge">Fridge</string>
    <string name="book">Recipes</string>
    <string name="statistics">Statistics</string>
    <string name="share">Share Recipe</string>
    <string name="account">My Account</string>
    <string name="database">Database</string>
    <string name="title_activity_fridge_form">FridgeFormActivity</string>
    <string name="settings">Export/Import</string>
    <string name="back">Back</string>
    <string name="title_activity_recipe_form">RecipeFormActivity</string>
    <string name="title_activity_fridge">FridgeActivity</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="expiry_date">Expiry Date:</string>
    <string name="expiring_soon">Expiring Soon</string>
    <string name="expired">Expired</string>
    <string name="grains">Grains</string>
    <string name="vegetables">Vegetables</string>
    <string name="fruits">Fruits</string>
    <string name="meat">Meat</string>
    <string name="dairy">Dairy</string>
    <string name="other">Other</string>
    <string name="my_fridge">My Fridge</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expirydate">Expiry Date</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="item">Item</string>
    <string name="qty">Qty</string>
    <string name="unit">Unit</string>
    <string name="expiry">Expiry</string>
    <string name="category_name">Category Name</string>
    <string name="today_s_frecipes_generated">Today\'s Frecipes Generated!</string>
</resources>
